View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033163 | Community | OCCT:Mesh | public | 2022-10-10 15:46 | 2023-03-19 22:36 |
Reporter | festive-shrimp | Assigned To | oan | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Ubuntu 20.04 | ||
Product Version | 7.6.3 | ||||
Target Version | 7.7.0 | Fixed in Version | 7.7.0 | ||
Summary | 0033163: Bad definition of values in IMeshData_Status | ||||
Description | The flag IMeshData_UserBreak has value 0x160, which is a number with three bits equal to 1. Thus, anything setting the flag IMeshData_UserBreak will also set the completely unrelated flags IMeshData_TooFewPoints (0x20) and IMeshData_Outdated (0x40), which is likely not what is desired. Also, even if that flag is not set, testing for IMeshData_UserBreak may not work as expected, since ANDing with IMeshData_UserBreak may give a non-zero value if either IMeshData_TooFewPoints or IMeshData_Outdated is set. | ||||
Steps To Reproduce | None | ||||
Additional information and documentation updates | You can find the enum values in the documentation here for 7.6.*: https://dev.opencascade.org/doc/occt-7.6.0/refman/html/_i_mesh_data___status_8hxx.html Or the for the newest version: https://dev.opencascade.org/doc/refman/html/_i_mesh_data___status_8hxx.html | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33163 has been created by oan. SHA-1: 2ef176ed2a2c2856d7295f62275f30c1b163e0ed Detailed log of new commits: Author: oan Date: Wed Oct 19 00:49:02 2022 +0300 0033163: Bad definition of values in IMeshData_Status Corrected value of status enum |
|
Test reports: http://jenkins-test-occt/view/master-CR33163-OAN/view/COMPARE/ To integrate: OCCT: CR33163 PRODUCTS: None |
|
Branch CR33163 has been deleted by mnt. SHA-1: 2ef176ed2a2c2856d7295f62275f30c1b163e0ed |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-10-10 15:46 | festive-shrimp | New Issue | |
2022-10-10 15:46 | festive-shrimp | Assigned To | => oan |
2022-10-19 00:49 | git | Note Added: 0111649 | |
2022-10-19 00:56 | oan | Target Version | => 7.7.0 |
2022-10-19 11:28 | oan | Status | new => resolved |
2022-10-19 11:28 | oan | Steps to Reproduce Updated | |
2022-10-19 11:28 | oan | Note Added: 0111653 | |
2022-10-19 11:28 | oan | Assigned To | oan => msv |
2022-10-19 11:57 |
|
Assigned To | msv => bugmaster |
2022-10-19 11:57 |
|
Status | resolved => reviewed |
2022-11-02 13:40 |
|
Status | reviewed => tested |
2022-11-02 13:46 |
|
Changeset attached | => occt master a24391a1 |
2022-11-02 13:46 | oan | Assigned To | bugmaster => oan |
2022-11-02 13:46 | oan | Status | tested => verified |
2022-11-02 13:46 | oan | Resolution | open => fixed |
2022-11-02 13:53 | git | Note Added: 0111878 | |
2023-03-19 22:36 | vglukhik | Status | verified => closed |
2023-03-19 22:36 | vglukhik | Fixed in Version | => 7.7.0 |