0033163: Bad definition of values in IMeshData_Status

Corrected value of status enum